--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "apollo-boost": "^0.4.9",
     "firebase": "6.0.2",
     "graphql": "^15.5.3",
-    "node-sass": "^4.14.1",
+    "node-sass": "4.12.0",
     "react": "^16.8.6",
     "react-apollo": "^3.1.5",
     "react-dom": "^16.8.6",
